--- a/app/index.html
+++ b/app/index.html
@@ -7,35 +7,37 @@
   <!-- Required meta tags -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- CSS -->
+  <script>
+        if (typeof module === 'object') {
+            window.module = module;
+            module = undefined;
+        }
+    </script>
+
+    <!-- jquery -->
+    <script>
+        window.$ = window.jQuery = require("jquery");
+    </script>
+
+    <!-- noty -->
+    <link rel="stylesheet" href="../node_modules/noty/lib/noty.css">
+    <link rel="stylesheet" href="../node_modules/noty/lib/themes/bootstrap-v4.css">
+    <script type="text/javascript" src="../node_modules/noty/lib/noty.min.js" defer></script>
+
+    <!-- animate.css -->
+    <link rel="stylesheet" href="../node_modules/animate.css/animate.min.css">
+
   <!-- logre -->
   <link rel="stylesheet" href="css/logre/logre.css"  />
 
   <!-- bootstrap -->
-  <!-- 4.3.1 -->
-  <link rel="stylesheet" href="js/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
 
   <!-- DataTables -->
   <!-- 1.10.18 -->
   <link rel="stylesheet" href="js/datatables/1.10.18/datatables.min.css"  />
   <link rel="stylesheet" href="js/datatables/1.10.18/Buttons-1.5.6/css/buttons.dataTables.min.css"  />
-
-  <!-- select 2 -->
-  <!-- 4.0.5 -->
-  <link rel="stylesheet" href="js/select2/4.0.5/css/select2.min.css"  />
-
-
-  <!-- JAVASCRIPT -->
-  <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-
-  <!-- jquery -->
-  <!-- 3.3.1 -->
-  <script src="js/jquery/3.3.1/jquery-3.3.1.min.js"></script>
-
-  <!-- bootstrap -->
-  <!-- 4.3.1 -->
-  <script src="js/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
   <!-- DataTables -->
   <!-- 1.10.18 -->
   <script src="js/datatables/1.10.18/datatables.js"></script>
@@ -49,59 +51,24 @@
 
   <!-- select 2 -->
   <!-- 4.0.5 -->
+  <link rel="stylesheet" href="js/select2/4.0.5/css/select2.min.css"  />
   <script src="js/select2/4.0.5/js/select2.min.js"></script>
 
   <!-- semver-->
   <script src="js/semver/semver.min.js"></script>
-
-  <!-- logre-->
-  <script src="js/logre/logre.js"></script>
-
 </head>
 
 
 <body>
-
     <!-- navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Logre</a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-            <!--
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-        -->
-            <!--
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-        -->
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Help</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" onclick="openURL('https://github.com/yafp/logre/issues');">Issues</a>
-                <a class="dropdown-item" onclick="openURL('https://github.com/yafp/logre');">Code</a>
-                <a class="dropdown-item" onclick="openURL('https://github.com/yafp/logre/releases');">Releases</a>
-                <a class="dropdown-item" onclick="openURL('https://github.com/yafp/logre/blob/master/docs/CHANGELOG.md');">Changelog</a>
-                <a class="dropdown-item" onclick="openURL('https://github.com/yafp/logre/blob/master/LICENSE');">License</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" onclick="openDevConsole();">Console (F12)</a>
-            </div>
-        </li>
-                <!--
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            -->
-        </ul>
-            <!--
-            <form class="form-inline my-2 my-lg-0">
-            -->
+
 
             <select class="logreSelects" id="logSource" name="logSource" disabled>
                 <option value="syslog">/var/log/syslog</option>
@@ -113,10 +80,7 @@
 
             &nbsp;
 
-            <button class="btn btn-outline-success my-2 my-sm-0" onClick="update();">Update</button>
-            <!--
-            </form>
-        -->
+            <button class="btn btn-outline-success float-right" onClick="update();">Update</button>
     </div>
 </nav>
 <!-- /navigation -->
@@ -132,33 +96,6 @@
 
 <!-- container / content -->
 <div class="container-fluid">
-
-    <!-- The Modal - ased as error dialog. Is hidden out of the box-->
-    <div class="modal" id="myModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h4 class="modal-title">Error</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-
-                <!-- Modal body -->
-                <div class="modal-body">
-                    <!-- text gets inserted by javascript -->
-                    <div class="errorText"></div>
-                </div>
-
-                <!-- Modal footer -->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /Modal Error Dialog -->
-
 
     <!-- DataTable -->
     <table id="example" class="display" style="width:100%">
@@ -197,43 +134,18 @@
 <!-- /container / content -->
 
 
-
-
-<!-- footer -->
-<footer class="footer">
-    <div class="container text-center">
-      <span class="text-muted">
-
-        <!-- app name and version -->
-        <script>
-          var appVersion = require('electron').remote.app.getVersion();
-          var appName = require('electron').remote.app.getName();
-          document.write("<span class='badge badge-success'>" + appName + " " +appVersion +"</span> ");
-      </script>
-
-      <!-- All of the Node.js APIs are available in this renderer process. -->
-      using <span class="badge badge-secondary">Node.js <script>document.write(process.versions.node)</script></span>,
-      <span class="badge badge-secondary">Chromium <script>document.write(process.versions.chrome)</script></span>,
-      and <span class="badge badge-secondary">Electron <script>document.write(process.versions.electron)</script></span>.
-  </span>
-
-
-</div>
-</footer>
-<!-- /footer -->
+<!-- You can also require other files to run in this process -->
+    <script src="js/renderer.js"></script>
 
 
 <script>
       // You can also require other files to run in this process
-      require('../renderer.js')
-
       $(document).ready(function()
       {
         console.log("on ready ::: Start");
 
         // hide update notifier
         $('#updateInformation').hide();
-
 
         checkRequirements();
         keyListener();
@@ -243,13 +155,7 @@
         // make all select to select2
         //$('.logreSelects').select2();
 
-        // if modal error/warning is displayed and confirmed by user -> die
-        $('#myModal').on('hidden.bs.modal', function ()
-        {
-            die();
-        })
-
-        console.log("on ready ::: Start");
+        console.log("on ready ::: End");
     });
 
 </script>
