--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,9 @@
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
 
+  <!-- fontawesome -->
+<script src="../node_modules/@fortawesome/fontawesome-free/js/all.min.js" defer></script>
+
   <!-- DataTables -->
   <!-- 1.10.18 -->
   <link rel="stylesheet" href="js/datatables/1.10.18/datatables.min.css"  />
@@ -60,81 +63,140 @@
 
 
 <body>
-    <!-- navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <!-- empty line -->
+    <!--
+        <div class="row-fluid row-empty">&nbsp;</div>
+      -->
 
 
-            <select class="logreSelects" id="logSource" name="logSource" disabled>
-                <option value="syslog">/var/log/syslog</option>
-            </select>
-
-            &nbsp;
-
-            <input type="search" class="form-control" id="myInputTextField" placeholder="search">
-
-            &nbsp;
-
-            <button class="btn btn-outline-success float-right" onClick="update();">Update</button>
-    </div>
-</nav>
-<!-- /navigation -->
-
-
-<!-- update information -->
-<div class="alert alert-success" role="alert" id="updateInformation">
+    <!-- update information -->
+    <div class="alert alert-success" role="alert" id="updateInformation">
     checking for updates
-</div>
-<!-- update information -->
+    </div>
+    <!-- update information -->
+
+
+
 
 
 
 <!-- container / content -->
-<div class="container-fluid">
+<div id="mainContainer" class="container-fluid logre_nonSelectableText">
 
-    <!-- DataTable -->
-    <table id="example" class="display" style="width:100%">
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>Date</th>
-            <th>Source</th>
-            <th>Application</th>
-            <th>Message</th>
-        </tr>
-    </thead>
-    <tfoot>
-      <tr>
-        <th>ID</th>
-        <th>Date</th>
-        <th>Source</th>
-        <th>Application</th>
-        <th>Message</th>
-    </tr>
-</tfoot>
-</table>
-<!-- /DataTable -->
+    <!-- Tabs -->
+    <div class="row-fluid">
+        <div class="nav nav-tabs" id="pills-tab" role="tablist">
+            <a class="nav-item nav-link active" id="navTabHome" data-toggle="tab" href="#tabHome" role="tab" aria-controls="nav-home" aria-selected="true"><i class="fas fa-home"></i> Home</a>
+            <a class="nav-item nav-link" id="navTabSyslog" data-toggle="tab" href="#tabSyslog" role="tab" aria-controls="nav-profile" aria-selected="false"><i class="fas fa-list"></i> syslog</a>
+            <a class="nav-item nav-link" id="navTabJournalCtl" data-toggle="tab" href="#tabJournalCtl" role="tab" aria-controls="nav-profile" aria-selected="false"><i class="fas fa-list-ul"></i> journalctl</a>
+        </div>
+    </div>
+    <!-- /Tabs -->
+
+    <!-- tabs content -->
+        <div class="tab-content">
+
+            <!-- Tab: overview -->
+            <div class="tab-pane active" id="tabHome" role="tabpanel">
+
+                <!-- syslog -->
+                <div id="homeSyslog" class="homeService border">
+                  <i class="fas fa-list fa-5x"></i>
+                  <p>syslog</p>
+                  <span id="homeSyslogStatus" class="badge">status</span>
+                </div>
+                <!-- /syslog -->
+
+                <!-- journalctl -->
+                <div id="homeJournalCtl" class="homeService border">
+                  <i class="fas fa-list-ul fa-5x"></i>
+                  <p>journalctl</p><span id="homeJournalCtlStatus" class="badge">status</span>
+                </div>
+                <!-- /journalctl -->
+
+            </div>
+            <!-- /Tab: overview -->
 
 
-<!-- explain the used colors in column msg -->
-<div class="row">
-  <div class="col">
-      <span class="boxes m_redLight text-center" title="Pattern: error, fail"></span>
-      <span class="boxes m_orangeLight text-center" title="Pattern: warning, unable"></span>
-      <span class="boxes m_yellowLight text-center" title="Pattern: unsupported"></span>
-  </div>
-</div>
+            <!-- Tab: syslog -->
+            <div class="tab-pane" id="tabSyslog" role="tabpanel">
+               <button class="btn btn-outline-success float-right" onClick="syslogLoad();">Update</button>
+                <!-- DataTable -->
+                <table id="example" class="display" style="width:100%">
+                    <thead>
+                      <tr>
+                        <th>ID</th>
+                        <th>Date</th>
+                        <th>Source</th>
+                        <th>Application</th>
+                        <th>Message</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                  <tr>
+                    <th>ID</th>
+                    <th>Date</th>
+                    <th>Source</th>
+                    <th>Application</th>
+                    <th>Message</th>
+                </tr>
+            </tfoot>
+            </table>
+            <!-- /DataTable -->
+
+            <!-- explain the used colors in column msg -->
+            <div class="row">
+              <div class="col">
+                  <span class="boxes m_redLight text-center" title="Pattern: error, fail"></span>
+                  <span class="boxes m_orangeLight text-center" title="Pattern: warning, unable"></span>
+                  <span class="boxes m_yellowLight text-center" title="Pattern: unsupported"></span>
+              </div>
+            </div>
+
+            </div>
+            <!-- /Tab: syslog -->
+
+
+            <!-- Tab: journalctl -->
+            <div class="tab-pane" id="tabJournalCtl" role="tabpanel">
+                <!-- DataTable -->
+                <table id="dtJournalCtl" class="display" style="width:100%">
+                    <thead>
+                      <tr>
+                        <th>PID (!)</th>
+                        <th>Date</th>
+                        <th>Source</th>
+                        <th>Identifier (!)</th>
+                        <th>Unit</th>
+                        <th>Application</th>
+                        <th>Message (!)</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                  <tr>
+                    <th>PID</th>
+                    <th>Date</th>
+                    <th>Source</th>
+                    <th>Identifier</th>
+                    <th>Unit</th>
+                    <th>Application</th>
+                    <th>Message</th>
+                </tr>
+            </tfoot>
+            </table>
+            <!-- /DataTable -->
+
+            </div>
+            <!-- /Tab: journalctl -->
+        </div>
+    <!-- /tabs content -->
 
 </div>
 <!-- /container / content -->
 
 
-<!-- You can also require other files to run in this process -->
+    <!-- You can also require other files to run in this process -->
     <script src="js/renderer.js"></script>
 
 
@@ -143,18 +205,12 @@
       $(document).ready(function()
       {
         console.log("on ready ::: Start");
-
-        // hide update notifier
-        $('#updateInformation').hide();
-
+        titlebarInit()
         checkRequirements();
-        keyListener();
-        initApp();
+        $('#updateInformation').hide(); // hide update notifier
         checkForNewLogreRelease();
-
         // make all select to select2
         //$('.logreSelects').select2();
-
         console.log("on ready ::: End");
     });
 
