--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
 
     <!-- DataTables -->
     <!-- 1.10.18 -->
+    <!--
     <link rel="stylesheet" href="js/datatables/1.10.18/datatables.min.css"  />
     <link rel="stylesheet" href="js/datatables/1.10.18/Buttons-1.5.6/css/buttons.dataTables.min.css"  />
     <script src="js/datatables/1.10.18/datatables.js"></script>
@@ -49,11 +50,28 @@
     <script src="js/datatables/1.10.18/pdfmake-0.1.36/pdfmake.min.js"></script>
     <script src="js/datatables/1.10.18/pdfmake-0.1.36/vfs_fonts.js"></script>
     <script src="js/datatables/1.10.18/JSZip-2.5.0/jszip.min.js"></script>
+    -->
+
+    <!-- DataTables via npm-->
+    <!-- css -->
+    <link rel="stylesheet" href="../node_modules/datatables/media/css/jquery.dataTables.min.css" />
+    <!-- core -->
+    <script src="../node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
+    <!-- buttons -->
+    <script src="../node_modules/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+    <script src="../node_modules/datatables.net-buttons/js/buttons.print.min.js"></script>
+    <script src="../node_modules/datatables.net-buttons/js/buttons.html5.min.js"></script>
+    <script src="../node_modules/datatables.net-buttons/js/buttons.colVis.min.js"></script>
+    <!-- reorder -->
+    <link rel="stylesheet" href="../node_modules/datatables.net-colreorder-dt/css/colReorder.dataTables.min.css" />
+    <script src="../node_modules/datatables.net-colreorder-dt/js/colReorder.dataTables.min.js"></script>
 
     <!-- select 2 -->
     <!-- 4.0.5 -->
+    <!--
     <link rel="stylesheet" href="js/select2/4.0.5/css/select2.min.css"  />
     <script src="js/select2/4.0.5/js/select2.min.js"></script>
+    -->
 
     <!-- semver-->
     <script src="js/semver/semver.min.js"></script>
@@ -93,25 +111,29 @@
             <!-- Tab: overview -->
             <div class="tab-pane active" id="tabHome" role="tabpanel">
 
+                <div class="row-fluid row-empty">&nbsp;</div>
+
+                <div class="alert alert-dark" role="alert">The following services are currently supported.</div>
+
                 <div class="row">
 
-                <!-- syslog -->
-                <div id="homeSyslog" class="homeService border">
-                  <i class="fas fa-list fa-5x"></i>
-                  <p>syslog</p>
-                  <span id="homeSyslogStatus" class="badge">status</span>
-                </div>
-                <!-- /syslog -->
+                    <!-- syslog -->
+                    <div id="homeSyslog" class="homeService border" onclick="switchTab('tabSyslog');">
+                        <i class="fas fa-list fa-5x homeServiceIcon"></i>
+                        <h2><span class="badge badge-secondary">syslog</span></h2>
+                        <span id="homeSyslogStatus" class="badge">status</span>
+                    </div>
+                    <!-- /syslog -->
 
-                <!-- journalctl -->
-                <div id="homeJournalCtl" class="homeService border">
-                  <i class="fas fa-list-ul fa-5x"></i>
-                  <p>journalctl</p><span id="homeJournalCtlStatus" class="badge">status</span>
-                </div>
-                <!-- /journalctl -->
+                    <!-- journalctl -->
+                    <div id="homeJournalCtl" class="homeService border" onclick="switchTab('tabJournalCtl');">
+                        <i class="fas fa-list-ul fa-5x homeServiceIcon"></i>
+                        <h2><span class="badge badge-secondary">journalctl</span></h2>
+                        <span id="homeJournalCtlStatus" class="badge">status</span>
+                    </div>
+                    <!-- /journalctl -->
 
                 </div>
-
             </div>
             <!-- /Tab: overview -->
 
@@ -167,24 +189,32 @@
                 <table id="dtJournalCtl" class="display" style="width:100%">
                     <thead>
                       <tr>
-                        <th>PID (!)</th>
+                        <th>PID</th>
+                        <th>Timestamp</th>
+                        <th>Machine ID</th>
+                        <th>Hostname</th>
                         <th>Date</th>
-                        <th>Source</th>
-                        <th>Identifier (!)</th>
+                        <th>Priority</th>
+                        <th>Identifier</th>
                         <th>Unit</th>
                         <th>Application</th>
-                        <th>Message (!)</th>
+                        <th>Message</th>
+                        <th>Message ID</th>
                     </tr>
                 </thead>
                 <tfoot>
                   <tr>
                     <th>PID</th>
+                    <th>Timestamp</th>
+                    <th>Machine ID</th>
+                    <th>Hostname</th>
                     <th>Date</th>
-                    <th>Source</th>
+                    <th>Priority</th>
                     <th>Identifier</th>
                     <th>Unit</th>
                     <th>Application</th>
                     <th>Message</th>
+                    <th>Message ID</th>
                 </tr>
             </tfoot>
             </table>
@@ -207,14 +237,14 @@
         // You can also require other files to run in this process
         $(document).ready(function()
         {
-            console.log("on ready ::: Start");
+            console.log("index.html ::: on ready ::: Start");
             titlebarInit()
             checkRequirements();
             $('#updateInformation').hide(); // hide update notifier
             checkForNewLogreRelease();
             // make all select to select2
             //$('.logreSelects').select2();
-            console.log("on ready ::: End");
+            console.log("index.html ::: on ready ::: End");
         });
 
     </script>
