--- a/app/index.html
+++ b/app/index.html
@@ -37,34 +37,84 @@
     <!-- fontawesome -->
     <script src="../node_modules/@fortawesome/fontawesome-free/js/all.min.js" defer></script>
 
-    <!-- DataTables -->
-    <!-- 1.10.18 -->
-    <!--
-    <link rel="stylesheet" href="js/datatables/1.10.18/datatables.min.css"  />
-    <link rel="stylesheet" href="js/datatables/1.10.18/Buttons-1.5.6/css/buttons.dataTables.min.css"  />
-    <script src="js/datatables/1.10.18/datatables.js"></script>
-    <script src="js/datatables/1.10.18/Buttons-1.5.6/js/dataTables.buttons.min.js"></script>
-    <script src="js/datatables/1.10.18/Buttons-1.5.6/js/buttons.html5.min.js"></script>
-    <script src="js/datatables/1.10.18/Buttons-1.5.6/js/buttons.print.min.js"></script>
-    <script src="js/datatables/1.10.18/Buttons-1.5.6/js/buttons.flash.js"></script>
-    <script src="js/datatables/1.10.18/pdfmake-0.1.36/pdfmake.min.js"></script>
-    <script src="js/datatables/1.10.18/pdfmake-0.1.36/vfs_fonts.js"></script>
-    <script src="js/datatables/1.10.18/JSZip-2.5.0/jszip.min.js"></script>
-    -->
 
-    <!-- DataTables via npm-->
-    <!-- css -->
-    <link rel="stylesheet" href="../node_modules/datatables/media/css/jquery.dataTables.min.css" />
+    <!-- DataTables - local -->
     <!-- core -->
+    <link rel="stylesheet" type="text/css" href="js/DataTables/datatables.min.css"/>
+    <script type="text/javascript" src="js/DataTables/datatables.min.js"></script>
+
+    <!-- DataTables -->
+    <link rel="stylesheet" type="text/css" href="js/DataTables/DataTables-1.10.20/css/jquery.dataTables.min.css"/>
+    <script type="text/javascript" src="js/DataTables/DataTables-1.10.20/js/jquery.dataTables.min.js"></script>
+
+    <!-- Buttons -->
+    <link rel="stylesheet" type="text/css" href="js/DataTables/Buttons-1.6.1/css/buttons.dataTables.min.css"/>
+    <script type="text/javascript" src="js/DataTables/Buttons-1.6.1/js/dataTables.buttons.min.js"></script>
+    <script type="text/javascript" src="js/DataTables/Buttons-1.6.1/js/buttons.colVis.min.js"></script>
+    <script type="text/javascript" src="js/DataTables/Buttons-1.6.1/js/buttons.html5.min.js"></script>
+    <script type="text/javascript" src="js/DataTables/Buttons-1.6.1/js/buttons.print.min.js"></script>
+
+    <!-- jszip -->
+    <script type="text/javascript" src="js/DataTables/JSZip-2.5.0/jszip.min.js"></script>
+
+    <!-- pdfmake -->
+    <script type="text/javascript" src="js/DataTables/pdfmake-0.1.36/pdfmake.min.js"></script>
+    <script type="text/javascript" src="js/DataTables/pdfmake-0.1.36/vfs_fonts.js"></script>
+
+
+    <!-- Datatables via npm -->
+    <!-- datatables core -->
+    <!--
+    <link rel="stylesheet" type="text/css" href="../node_modules/datatables.net-dt/css/jquery.dataTables.min.css"/>
+    <script src="../node_modules/datatables.net-dt/js/dataTables.dataTables.min.js"></script>
     <script src="../node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
-    <!-- buttons -->
+-->
+
+    <!-- datatables: buttons -->
+    <!--
+    <link rel="stylesheet" type="text/css" href="../node_modules/datatables.net-buttons-dt/css/buttons.dataTables.min.css"/>
+    <script src="../node_modules/datatables.net-buttons-dt/js/buttons.dataTables.min.js"></script>
     <script src="../node_modules/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
-    <script src="../node_modules/datatables.net-buttons/js/buttons.print.min.js"></script>
-    <script src="../node_modules/datatables.net-buttons/js/buttons.html5.min.js"></script>
+
     <script src="../node_modules/datatables.net-buttons/js/buttons.colVis.min.js"></script>
-    <!-- reorder -->
-    <link rel="stylesheet" href="../node_modules/datatables.net-colreorder-dt/css/colReorder.dataTables.min.css" />
+    <script src="../node_modules/datatables.net-buttons/js/buttons.html5.min.js"></script>
+    <script src="../node_modules/datatables.net-buttons/js/buttons.print.min.js"></script>
+-->
+
+     <!-- jszip -->
+     <!--
+    <script src="../node_modules/jszip/dist/jszip.min.js"></script>
+-->
+    <!-- pdfmake -->
+    <!--
+    <script src="../node_modules/pdfmake/build/pdfmake.min.js"></script>
+    <script src="../node_modules/pdfmake/build/vfs_fonts.js"></script>
+-->
+
+
+
+    <!-- datatables: colredorder -->
+    <!--
+    <link rel="stylesheet" type="text/css" href="../node_modules/datatables.net-colreorder-dt/css/colReorder.dataTables.min.css"/>
     <script src="../node_modules/datatables.net-colreorder-dt/js/colReorder.dataTables.min.js"></script>
+-->
+
+    <!-- datatables: keytable -->
+    <!--
+    <link rel="stylesheet" type="text/css" href="../node_modules/datatables.net-keytable-dt/css/keyTable.dataTables.min.css"/>
+    <script src="../node_modules/datatables.net-keytable-dt/js/keyTable.dataTables.min.js"></script>
+-->
+    <!-- datatables: responsive -->
+    <!--
+    <link rel="stylesheet" type="text/css" href="../node_modules/datatables.net-responsive-dt/css/responsive.dataTables.min.css"/>
+    <script src="../node_modules/datatables.net-responsive-dt/js/responsive.dataTables.min.js"></script>
+-->
+    <!-- datatables: select -->
+    <!--
+    <link rel="stylesheet" type="text/css" href="../node_modules/datatables.net-select-dt/css/select.dataTables.min.css"/>
+    <script src="../node_modules/datatables.net-select-dt/js/select.dataTables.min.js"></script>
+-->
+
 
     <!-- select 2 -->
     <!-- 4.0.5 -->
@@ -86,9 +136,11 @@
     -->
 
     <!-- update information -->
+    <!--
     <div class="alert alert-success" role="alert" id="updateInformation">
     checking for updates
     </div>
+    -->
     <!-- update information -->
 
 
@@ -113,7 +165,9 @@
 
                 <div class="row-fluid row-empty">&nbsp;</div>
 
-                <div class="alert alert-dark" role="alert">The following services are currently supported.</div>
+                <!--
+                <div class="alert alert-dark" role="alert">The following log sources are currently supported.</div>
+                -->
 
                 <div class="row">
 
@@ -121,7 +175,8 @@
                     <div id="homeSyslog" class="homeService border" onclick="switchTab('tabSyslog');">
                         <i class="fas fa-list fa-5x homeServiceIcon"></i>
                         <h2><span class="badge badge-secondary">syslog</span></h2>
-                        <span id="homeSyslogStatus" class="badge">status</span>
+                        <span id="homeSyslogStatus" class="badge">status</span><br>
+                        <span id="homeSyslogMode" class="badge badge-warning">needs manual reload</span>
                     </div>
                     <!-- /syslog -->
 
@@ -130,6 +185,8 @@
                         <i class="fas fa-list-ul fa-5x homeServiceIcon"></i>
                         <h2><span class="badge badge-secondary">journalctl</span></h2>
                         <span id="homeJournalCtlStatus" class="badge">status</span>
+                        <br>
+                        <span id="homeJournalCtlMode" class="badge badge-info">self-updating</span>
                     </div>
                     <!-- /journalctl -->
 
@@ -141,11 +198,15 @@
             <!-- Tab: syslog -->
             <div class="tab-pane" id="tabSyslog" role="tabpanel">
 
+
                 <div class="row-fluid row-empty">&nbsp;</div>
 
+                <!--
                 <button class="btn btn-outline-success float-right" onClick="syslogLoad();">Update</button>
+                -->
+
                 <!-- DataTable -->
-                <table id="example" class="display" style="width:100%">
+                <table id="example" class="display logre_selectableText" style="width:100%">
                     <thead>
                       <tr>
                         <th>ID</th>
@@ -186,7 +247,7 @@
                 <div class="row-fluid row-empty">&nbsp;</div>
 
                 <!-- DataTable -->
-                <table id="dtJournalCtl" class="display" style="width:100%">
+                <table id="dtJournalCtl" class="display logre_selectableText" style="width:100%">
                     <thead>
                       <tr>
                         <th>PID</th>
@@ -240,8 +301,8 @@
             console.log("index.html ::: on ready ::: Start");
             titlebarInit()
             checkRequirements();
-            $('#updateInformation').hide(); // hide update notifier
-            checkForNewLogreRelease();
+            //$('#updateInformation').hide(); // hide update notifier
+            //checkForNewLogreRelease();
             // make all select to select2
             //$('.logreSelects').select2();
             console.log("index.html ::: on ready ::: End");
